<resources>
    <string name="app_name">WebKorház</string>

    <string name="title_activity_login">WebKorház</string>
    <string name="title_activity_main">Időpontok</string>
    <string name="title_activity_navigation">A korház alkalmazás</string>
    <string name="title_activity_consultationHourSearch">Rendelés keresés</string>
    <string name="title_activity_consultationHourListActivity">Keresési eredmények</string>

    <string name="login_welcome">Üdvözöljük!</string>
    <string name="login_username">Felhasználó név</string>
    <string name="login_pass">Jelszó</string>


    <string name="main_menu_navigation">Navigation</string>
    <string name="main_menu_refresh">Adatok frissítése</string>

    <string name="main_refresh_from_network">Foglalt időpontok frissítése!\n</string>
    <string name="main_refresh_department_from_network">Korházi osztályok frissítése!\n</string>


    <string name="navigation_appointment">Foglalások listázása</string>
    <string name="navigation_consultationHour">Rendelés keresés</string>


    <string name="navigation_logout">Kijelentkezés</string>
    <string name="navigation_settings">Beállítások</string>
    <string name="navigation_error">Hiba történt a kijelentkezés közben\n</string>

    <string name="consultationHourSearch_search">Keresés</string>
    <string name="consultationHourSearch_department">Osztály</string>
    <string name="consultationHourSearch_type">Rendelés típus</string>
    <string name="consultationHourSearch_date_interval">Idő intervallum</string>

    <string name="appointment_doctor">Doctor</string>
    <string name="appointment_CHType">Rendelés típusa</string>
    <string name="appointment_room">Helyszín</string>
    <string name="appointment_date">Időpont</string>
    <string name="appointment_complaints">Beteg panaszai</string>
    <string name="appointment_reload">Visszaállítás</string>
    <string name="appointment_save">Mentés</string>

    <string name="appointment_event_save">Sikeres időpont foglalás!</string>
    <string name="appointment_event_update">Sikeres időpont mentés!</string>
    <string name="appointment_event_delete">Sikeres időpont törlés!</string>

    <string name="resource_intent_consultationHour">consultationHourDtoList</string>
    <string name="resource_intent_appointment">appointment</string>
    <string name="resource_intent_department">department</string>


    <string name="action_settings">Settings</string>
    <string name="timeFormat">hh:mm</string>
    <string name="fullDateTimeFormat">yyyy-MM-dd HH:mm</string>
    <string name="resource_intent_consultationHourDto">consultationHourDto</string>
    <string name="resource_intent_consultationHourType">consultationHourType</string>
    <string name="main_menu_department_refresh">Osztály adatok frissítése</string>

</resources>
