<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_appointment"
    tools:context=".ui.appointment.AppointmentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/appointment_doctor"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/appointmentEditDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/appointment_CHType"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"  />

        <EditText
            android:id="@+id/appointmentEditCHType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/appointment_room"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/appointmentEditRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/appointment_date"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/appointmentEditDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/appointment_complaints"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"  />

        <EditText
            android:id="@+id/appointmentEditComplaints"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:gravity="top|left"
            android:lines="4"
            android:maxLines="10"
            android:scrollbars="vertical"/>

    </LinearLayout>
</ScrollView>