<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="aut.bme.hu.eventr.view.LoginActivity">

            <TextView
                android:id="@+id/loginTextWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_welcome"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="32sp"
                android:layout_marginTop="83dp"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/loginTextUsername"
                android:layout_alignStart="@+id/loginTextUsername"
                android:layout_alignRight="@+id/loginEditUsername"
                android:layout_alignEnd="@+id/loginEditUsername" />

            <TextView
                android:id="@+id/loginTextUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/login_username"
                android:layout_marginTop="75dp"
                android:layout_below="@+id/loginTextWelcome"
                android:layout_alignLeft="@+id/loginEditUsername"
                android:layout_alignStart="@+id/loginEditUsername" />

            <EditText
                android:id="@+id/loginEditUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_below="@+id/loginTextUsername"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/loginPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/login_pass"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_below="@+id/loginEditUsername"
                android:layout_alignLeft="@+id/loginEditPassword"
                android:layout_alignStart="@+id/loginEditPassword" />

            <EditText
                android:id="@+id/loginEditPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_below="@+id/loginPassword"
                android:layout_alignLeft="@+id/loginEditUsername"
                android:layout_alignStart="@+id/loginEditUsername"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login/Sign Up"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/loginEditPassword"
                android:layout_alignLeft="@+id/loginEditPassword"
                android:layout_alignStart="@+id/loginEditPassword"
                android:layout_alignRight="@+id/loginEditPassword"
                android:layout_alignEnd="@+id/loginEditPassword" />

        </RelativeLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
