<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.navigation.NavigationActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            />

    </android.support.design.widget.AppBarLayout>



    <TableLayout
        android:id="@+id/navigation_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                app:srcCompat="@drawable/ic_event_note_black_36dp" />

            <TextView
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:paddingTop="7dp"
                android:ems="10"
                android:onClick="showAppointmentList"
                android:text="@string/navigation_appointment"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                app:srcCompat="@drawable/ic_search" />

            <TextView
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:paddingTop="7dp"
                android:ems="10"
                android:text="@string/navigation_consultationHour"
                android:textColor="@android:color/black"
                android:onClick="showConsultationHourSearch"/>
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:paddingBottom="@dimen/table_padding_top"
            android:paddingTop="@dimen/table_padding_top" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                app:srcCompat="@drawable/ic_exit_to_app_black_36dp" />

            <TextView
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:paddingTop="7dp"
                android:ems="10"
                android:text="@string/navigation_logout"
                android:textColor="@android:color/black"
                android:onClick="logout" />
        </TableRow>
    </TableLayout>


</android.support.design.widget.CoordinatorLayout>