<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_consultationhour_search"
    tools:context=".ui.ConsultationHourSearch.ConsultationHourSearchActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/chSearchTextDepartment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:text="@string/consultationHourSearch_department"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Spinner
                android:id="@+id/chSearchSpinnerDepartmentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/chSearchTextDepartment"
                android:layout_marginTop="18dp" />


            <TextView
                android:id="@+id/chSearchTextType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="@string/consultationHourSearch_type"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_below="@+id/chSearchSpinnerDepartmentName"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/chSearchSpinnerTypeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/chSearchTextType"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/chSearchTextIntervall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consultationHourSearch_type"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="32dp"
                android:layout_below="@+id/chSearchSpinnerTypeName"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/chsearchDateBegin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:onClick="selectDateTime"
                android:layout_below="@+id/chSearchTextIntervall"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/chsearchDateEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:onClick="selectDateTime"
                android:layout_marginTop="22dp"
                android:layout_below="@+id/chsearchDateBegin"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="20sp" />

            <Button
                android:id="@+id/chSearchBtnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:text="@string/consultationHourSearch_search"
                android:layout_marginTop="55dp"
                android:onClick="searchConsultationHour"
                android:layout_below="@+id/chsearchDateEnd"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>